# pos-expo

./: .gitignore  DEV_NOTES.md  README.md  pyproject.toml
examples/: adult_income_pos_expo.py  toy_selection_bias.py
experiments/: README.md  benchmark.py  plots.py  plots_legacy_vs_lib.py  reproduce_legacy_benchmarks.py
experiments/results/: benchmarks.csv  legacy_vs_lib.csv
src/pos_expo/: __init__.py  core.py  diagnostics.py  estimators.py  poset.py  tilt.py
src/pos_expo/datasets/: __init__.py  adult.py  synthetic.py
src/pos_expo/features/: __init__.py  difficulty.py  diversity.py  rarity.py
tests/: test_core.py  test_datasets.py  test_diagnostics.py  test_estimators.py  test_features.py  test_poset.py  test_properties.py  test_real_pipeline.py  test_tilt.py  test_toy_scenarios.py
