[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pos-expo"
version = "0.1.0"
description = "Poset-Exponential Reweighting Library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
    "jupyter",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"


